# lpic-syntaxes

./: .gitignore  Readme.md  package.json  pyproject.toml
OriginalGrammars/: LaTeX.plist-license  Readme.md  context.tmLanguage-license.md  plist2json  plist2rbGrammar  reformatJson
RubyGrammars/: Readme.md  context-grammar  lpic-grammar
lpicSyntaxes/: context.tmGrammar.json  context.tmLanguage.json  context_scopes.txt  lpic.tmGrammar.json  lpic.tmLanguage.json  lpic_scopes.txt
scripts/: pushChanges  updateGrammars
tests/: Readme.md  jsonEcho.tex  testGrammar
