[project]
name = "lpic-syntaxes"
version = "0.0.1"
description = "The definitive source for all TextMate syntaxes used in the Literate Programming in ConTeXt projectsr"
authors = [
    {name = "Stephen Gaito", email = "stephen@perceptisys.co.uk"},
]
dependencies = []
requires-python = ">=3.10"
license = {text = "Apache2.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []
